test/errors/type/collections/set/__eq.yasl
echo collections.set().__band(collections.set(), true)
